...
            "value": "MPG (US)"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "миль/гал (США)"
          }
        }
      }
    },
    "Made for drivers who'd rather drive than type.": {
      "extractionState": "manual",
...
            "state": "translated",
            "value": "гал (Великобр.)"
          }
        }
      }
    },
    "gal (US)": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "gal (US)"
...
